--- a/potion-smith/src/components/forms/form.css
+++ b/potion-smith/src/components/forms/form.css
@@ -1,10 +1,8 @@
 /* For AgeGate Form */
 .age-gate {
-  text-align: center;
+  
   padding: 2rem;
-  font-family: "Smythe", system-ui;
   background-color: #630111;
-  color: white;
   border-radius: 8px;
   max-width: 400px;
   margin: 5rem auto;
